--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.9.6"
 authors = ["Martin Bernardi <martinber.710@gmail.com>"]
 
 [dependencies]
+num = "*"
 hound = "*"
 rustfft = "*"
 approx = "*"
