--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Martin Bernardi <martinber.710@gmail.com>"]
 
 [features]
 default = ["gui"]
-gui = ["gtk", "gdk", "gio"]
+gui = ["gtk", "gdk", "gio", "glib"]
 
 [dependencies]
 num = "*"
@@ -21,3 +21,4 @@ reqwest = "*"
 gtk = { version = "0.5.0", optional = true, features = ["v3_10"] }
 gdk = { version = "0.9.0", optional = true }
 gio = { version = "0.5.0", optional = true }
+glib = { version = "0.6.0", optional = true }
