Lots of documentation and increment version number

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 name: noaa-apt
 description: Image decoder for APT signals from NOAA satellites
-baseurl: 'https://noaa-apt.mbernardi.com.ar/'
+baseurl: 'https://noaa-apt.mbernardi.com.ar'
