--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "noaa-apt"
-version = "0.9.7"
+version = "0.9.7-dev"
 authors = ["Martin Bernardi <martinber.710@gmail.com>"]
 
 [features]
