--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ gtk = { version = "0.5.0", optional = true, features = ["v3_10"] }
 gdk = { version = "0.9.0", optional = true }
 gio = { version = "0.5.0", optional = true }
 glib = { version = "0.6.0", optional = true }
+openssl = { version = "0.10", features = ["vendored"] }
