--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ overflow-checks = true
 [features]
 default = ["gui"]
 gui = ["gtk", "gdk", "gio", "glib"]
+static_ssl = ["openssl/vendored"]
 
 [dependencies]
 num = "*"
@@ -26,9 +27,9 @@ log = "*"
 simple_logger = "*"
 argparse = "*"
 reqwest = "*"
+openssl = "0.10"
 
 gtk = { version = "0.5.0", optional = true, features = ["v3_10"] }
 gdk = { version = "0.9.0", optional = true }
 gio = { version = "0.5.0", optional = true }
 glib = { version = "0.6.0", optional = true }
-openssl = { version = "0.10", features = ["vendored"] }
