--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ argparse = "*"
 reqwest = "*"
 openssl = "0.10"
 
-gtk = { version = "0.5.0", optional = true, features = ["v3_10"] }
-gdk = { version = "0.9.0", optional = true }
-gio = { version = "0.5.0", optional = true }
-glib = { version = "0.6.0", optional = true }
+gtk = { version = "0.6.0", optional = true }
+gdk = { version = "0.10.0", optional = true }
+gio = { version = "0.6.0", optional = true }
+glib = { version = "0.7.0", optional = true }
