--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,9 @@ log = "*"
 simple_logger = "*"
 argparse = "*"
 reqwest = "*"
+directories = "*"
+toml = "*"
+serde = { version = "*", features = ["derive"] }
 openssl = "0.10"
 
 gtk = { version = "0.6.0", optional = true, features = ["v3_16"] }
