--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ overflow-checks = true
 [features]
 default = ["gui"]
 gui = ["gtk", "gdk", "gio", "glib"]
+# static_ssl = ["openssl/vendored"]
 
 [dependencies]
 num = "*"
@@ -29,8 +30,9 @@ reqwest = "*"
 directories = "*"
 toml = "*"
 serde = { version = "*", features = ["derive"] }
+# openssl = "0.10"
 
-gtk = { version = "0.6.0", optional = true, features = ["v3_16"] }
-gdk = { version = "0.10.0", optional = true }
-gio = { version = "0.6.0", optional = true }
-glib = { version = "0.7.0", optional = true }
+gtk = { git = "https://github.com/EPashkin/gtk.git", branch = "fontchooserlevel_version", optional = true, features = ["v3_16"] }
+gdk = { git = "https://github.com/gtk-rs/gdk.git", optional = true }
+gio = { git = "https://github.com/gtk-rs/gio.git", optional = true }
+glib = { git = "https://github.com/gtk-rs/glib.git", optional = true }
