Added timestamp GUI

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ argparse = "*"
 reqwest = "*"
 directories = "*"
 toml = "*"
+filetime = "*"
 serde = { version = "*", features = ["derive"] }
 
 # openssl is a indirect dependency because of reqwest, I have to add openssl as
