--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "noaa-apt"
 version = "1.1.1"
 authors = ["Martin Bernardi <martinber.710@gmail.com>"]
+edition = "2018"
 build = "src/build.rs"
 
 [profile.dev]
