Fix rotating images without shifting or removing samples
It works by reversing the signal, partitioning the samples into
channels B and A (by using PX_PER_CHANNEL = PX_PER_ROW / 2),
and then interleaving the channels in the correct order.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ chrono = "0.4.10"
 directories = "2.0.2"
 filetime = "0.2.8"
 hound = "3.4.0"
+itertools = "0.8.2"
 log = "0.4.8"
 num = "0.2.1"
 png = "0.15.3"
