Drop num crate completely as gcd algorithm is in own crate
I also looked the implementation of gcd crate and it looks
sane. There's also work in progress to implement binary GCD algorithm.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,9 +25,9 @@ argparse = "0.2.2"
 chrono = "0.4.10"
 directories = "2.0.2"
 filetime = "0.2.8"
+gcd = "1.2.0"
 hound = "3.4.0"
 log = "0.4.8"
-num = "0.2.1"
 png = "0.15.3"
 reqwest = { version = "0.10.1", features = [ "blocking" ] }
 rustfft = "3.0.1"
