--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,31 +22,32 @@ windows_console = [] # Show console on Microsoft Windows
 [dependencies]
 approx = "0.3.2"
 argparse = "0.2.2"
-chrono = "0.4.10"
+chrono = "0.4.11"
 directories = "2.0.2"
 filetime = "0.2.8"
 gcd = "2.0.1"
 hound = "3.4.0"
-itertools = "0.8.2"
+itertools = "0.9.0"
 log = "0.4.8"
-png = "0.15.3"
-reqwest = { version = "0.10.1", features = [ "blocking" ] }
+png = "0.16.1"
+reqwest = { version = "0.10.4", features = [ "blocking" ] }
 rustfft = "3.0.1"
 satellite = { git = "https://github.com/richinfante/satellite-rs", rev = "1f95726" }
-serde = { version = "1.0.104", features = ["derive"] }
-simple_logger = "1.5.0"
+serde = { version = "1.0.105", features = ["derive"] }
+serde_json = "1.0.48"
+simple_logger = "1.6.0"
 toml = "0.5.6"
 
 # openssl is a indirect dependency because of reqwest, I have to add openssl as
 # a direct dependency if I want to enable the "vendored" feature, but for
 # Windows it breaks the build. Looks like adding it as an optional dependency is
 # working for both cases
-openssl = { version = "0.10.27", optional = true }
+openssl = { version = "0.10.28", optional = true }
 
-gtk = { version = "0.8.0", optional = true, features = ["v3_16"] }
-gdk = { version = "0.12.0", optional = true }
-gio = { version = "0.8.0", optional = true }
-glib = { version = "0.9.1", optional = true }
+gtk = { version = "0.8.1", optional = true, features = ["v3_16"] }
+gdk = { version = "0.12.1", optional = true }
+gio = { version = "0.8.1", optional = true }
+glib = { version = "0.9.3", optional = true }
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.8", features = ["shellapi"] }
