--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,8 @@ gcd = "2.0.1"
 hound = "3.4.0"
 itertools = "0.9.0"
 log = "0.4.8"
-image = "0.23.2"
-reqwest = { version = "0.10.4", features = [ "blocking" ] }
+image = { version = "0.23.2", features = ["png"] }
+reqwest = { version = "0.10.4", features = ["blocking"] }
 rustfft = "3.0.1"
 satellite = { git = "https://github.com/richinfante/satellite-rs", rev = "1f95726" }
 serde = { version = "1.0.105", features = ["derive"] }
