--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "noaa-apt"
-version = "1.1.2"
+version = "1.2.0-dev"
 authors = ["Martin Bernardi <martinber.710@gmail.com>"]
 edition = "2018"
 build = "src/build.rs"
