--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ filetime = "0.2.8"
 gcd = "2.0.1"
 hound = "3.4.0"
 itertools = "0.9.0"
+line_drawing = "0.8.0"
 log = "0.4.8"
 image = { version = "0.23.2", features = ["png"] }
 reqwest = { version = "0.10.4", features = ["blocking"] }
