--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "noaa-apt"
-version = "1.2.0-dev"
+version = "1.2.0"
 authors = ["Martin Bernardi <martinber.710@gmail.com>"]
 edition = "2018"
 build = "src/build.rs"
@@ -24,18 +24,18 @@ approx = "0.3.2"
 argparse = "0.2.2"
 chrono = "0.4.11"
 directories = "2.0.2"
-filetime = "0.2.8"
+filetime = "0.2.10"
 gcd = "2.0.1"
 hound = "3.4.0"
 itertools = "0.9.0"
 line_drawing = "0.8.0"
 log = "0.4.8"
-image = { version = "0.23.2", features = ["png"] }
+image = { version = "0.23.4", features = ["png"] }
 reqwest = { version = "0.10.4", features = ["blocking"] }
 rustfft = "3.0.1"
 satellite = { git = "https://github.com/richinfante/satellite-rs", rev = "1f95726" }
-serde = { version = "1.0.105", features = ["derive"] }
-serde_json = "1.0.48"
+serde = { version = "1.0.110", features = ["derive"] }
+serde_json = "1.0.53"
 shapefile = "0.2.0"
 simple_logger = "1.6.0"
 toml = "0.5.6"
@@ -44,7 +44,7 @@ toml = "0.5.6"
 # a direct dependency if I want to enable the "vendored" feature, but for
 # Windows it breaks the build. Looks like adding it as an optional dependency is
 # working for both cases
-openssl = { version = "0.10.28", optional = true }
+openssl = { version = "0.10.29", optional = true }
 
 gtk = { version = "0.8.1", optional = true, features = ["v3_16"] }
 gdk = { version = "0.12.1", optional = true }
