Use semver when comparing latest and current versions
If compiling 1.3.0 from source while the latest release is 1.2.0,
according to https://noaa-apt.mbernardi.com.ar/version_check
the user would get a notification/warning that an update is
available, even if the update is an "older" version:
"Version 1.2.0 is available for download!".

This fix parses the current / latest using semantic versioning and
does not suggest an update if current >= latest.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ image = { version = "0.23.10", features = ["png"] }
 reqwest = { version = "0.10.8", features = ["blocking"] }
 rustfft = "4.0.0"
 satellite = { git = "https://github.com/richinfante/satellite-rs", rev = "1f95726" }
+semver = "0.11.0"
 serde = { version = "1.0.116", features = ["derive"] }
 serde_json = "1.0.58"
 shapefile = "0.2.0"
