--- a/debian/ar.com.mbernardi.noaa-apt.desktop
+++ b/debian/ar.com.mbernardi.noaa-apt.desktop
@@ -2,7 +2,7 @@
 Name=noaa-apt
 GenericName=Image decoder for APT signals from NOAA satellites
 Exec=noaa-apt
-Icon=noaa-apt
+Icon=ar.com.mbernardi.noaa-apt
 Terminal=false
 Type=Application
 Categories=Graphics;Utility;2DGraphics;RasterGraphics;HamRadio;Audio;ImageProcessing;
