Following better XDG practices (I hope) to fix icon on Linux

--- a/debian/ar.com.mbernardi.noaa-apt.desktop
+++ b/debian/ar.com.mbernardi.noaa-apt.desktop
@@ -3,6 +3,7 @@ Name=noaa-apt
 GenericName=Image decoder for APT signals from NOAA satellites
 Exec=noaa-apt
 Icon=ar.com.mbernardi.noaa-apt
+StartupNotify=true
 Terminal=false
 Type=Application
 Categories=Graphics;Utility;2DGraphics;RasterGraphics;HamRadio;Audio;ImageProcessing;
